fixed images width and text overflow in list show page

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,17 +1,18 @@
 .card-product {
   overflow: hidden;
-  height: 150px;
+  height: 200px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  width: 1200px;
   margin: 20px auto;
+  width: 1000px;
+  overflow: hidden;
 }
 
 .card-product img {
   height: 100%;
-  width: 150px;
+  width: 120px;
   object-fit: cover;
 }
 
@@ -21,14 +22,23 @@
   margin: 0;
 }
 
+.card-product h3 {
+  font-size: 13px;
+  font-weight: bold;
+}
+
 .card-product p {
   font-size: 12px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .card-product .card-product-infos {
   padding: 16px;
+  overflow: auto;
 }
